tests/snapshots/tui_snapshot__tui_tool_collapsed_by_toggle.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  mode: default


  › Read the file.

  ⎿ Tool read output: (+2 lines, ctrl+o to expand)


      Done.










  Tool output collapsed
  ╭ think off · Enter send · Shift+Enter newline · @file context ────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Persist: balanced  |  Ctrl+C quit
