tests/snapshots/tui_snapshot__tui_tool_output_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>
  ctrl+o: detail
















  ⎿ Read(src/main.rs)
    file contents here
  ╭ default · think off · Enter send · \+Enter newline · @file context ──────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Ctrl+C quit
