tests/snapshots/tui_snapshot__tui_tool_reexpanded.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  mode: default











  › Read the file.

  ⎿ Tool read output:
    short output here


      Done.
  Tool output expanded
  ╭ think off · Enter send · \+Enter newline · @file context ────────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Persist: balanced  |  Ctrl+C quit
