tests/snapshots/tui_snapshot__tui_wrapped_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  ...













      This is a longer assistant response that
      should wrap across multiple lines.
  ╭ think off · Enter send · \+Enter newline ──╮
  │ > Type a message... (/help, /exit)         │
  ╰────────────────────────────────────────────╯
  0/0 tokens  |  Persist: balanced  |  Ctrl+C quit
